2011-04-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Remove DeprecatedPtr
        https://bugs.webkit.org/show_bug.cgi?id=58718

        Replace use of DeprecatedPtr<> with Global<> as ownership rules
        aren't obvious, have filed bug #58820 on seeing if this is safe.

        * bridge/qt/qt_class.cpp:
        (JSC::Bindings::QtClass::fallbackObject):
        * bridge/qt/qt_instance.cpp:
        (JSC::Bindings::QtInstance::removeCachedMethod):
        (JSC::Bindings::QtInstance::markAggregate):
        * bridge/qt/qt_instance.h:

2011-04-14  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Simon Fraser.

        [CG] Use vImage (un)premultiplyImageData functions for get/putImageData with IOSurfaces
        https://bugs.webkit.org/show_bug.cgi?id=58088

        * platform/graphics/cg/ImageBufferDataCG.cpp:
        (WebCore::convertScanline): un/premultiplies and converts a scanline of image data from/to BGRA to/from RGBA
        (WebCore::unpremultitplyScanline):
        (WebCore::premultitplyScanline):
        (WebCore::ImageBufferData::getData):
        (WebCore::ImageBufferData::putData):

2011-04-18  Jeff Miller  <jeffm@apple.com>

        Reviewed by Dan Bernstein.

        Allow all log channels to be initialized from WebCoreLogLevel Windows environment variable
        https://bugs.webkit.org/show_bug.cgi?id=58811

        * platform/win/LoggingWin.cpp:
        (WebCore::InitializeLoggingChannelsIfNecessary): Support initializing LogResourceLoading, LogProgress, and LogFileAPI from WebCoreLogLevel Windows environment variable.

2011-04-18  Andrew Scherkus  <scherkus@chromium.org>

        Reviewed by Eric Seidel.

        Reset fullscreen element reference when leaving fullscreen mode and some other cleanup.

        https://bugs.webkit.org/show_bug.cgi?id=58719

        Test: fullscreen/full-screen-cancel.html

        * dom/Document.cpp:
        (WebCore::Document::Document): Remove m_isFullscreen.